# my-game

./: .clang-tidy  .gitignore  CMakeLists.txt  build.py  vcpkg.json
src/engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp  GameEngineWiringContainer.hpp
src/engine/assets/: AssetCache.hpp  AssetDescriptors.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetManager.cpp  AssetManager.hpp  AssetStorage.hpp  BuiltinAssetNames.hpp
src/engine/assets/importing/: AssetImporter.cpp  AssetImporter.hpp  importing.cpp  importing.hpp
src/engine/assets/types/: AssetDescriptors.hpp  Mesh.hpp  Texture.hpp
src/engine/core/: GameEngine.cpp  GameEngine.hpp  GameEngineWiringContainer.hpp  GameEntitiesManager.hpp  GameWindow.hpp  Time.hpp
src/engine/core/assets/: AssetManager.hpp
src/engine/core/input/: InputSystem.hpp
src/engine/core/math/: AABB.hpp  BVH.hpp
src/engine/core/objects/: ComponentStorage.hpp  GameObject.hpp
src/engine/core/picking/: PickingSystem.hpp
src/engine/core/scene/: DefaultOptions.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
src/engine/core/systems/: RenderSystem.hpp
src/engine/core/ui/: ImguiWidget.hpp  UserInterface.hpp
src/engine/data/assets/: Material.hpp  Mesh.hpp  Shader.hpp
src/engine/data/components/: BoxCollider.hpp  Camera.hpp  Renderer.hpp  Transform.hpp
src/engine/data/settings/: RendererSettings.hpp
src/engine/modules/asset_management/: AssetCache.hpp  AssetExplorer.hpp  AssetLoader.hpp  BuiltinAssetNames.hpp  MeshImporter.cpp  MeshImporter.hpp  ProceduralMeshGenerator.cpp  ProceduralMeshGenerator.hpp  VirtualFileSystem.hpp
src/engine/modules/assets/: AssetDescriptors.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetManager.hpp  AssetStorage.hpp  BuiltinAssetNames.hpp  MeshImporter.hpp  ProceduralMeshGenerator.hpp
src/engine/modules/input/: RaycastPickingSystem.hpp
src/engine/modules/physics/: PhysicsSystem.hpp  collision_utils.hpp
src/engine/modules/rendering/: GameRenderData.hpp  GameRenderSystem.hpp
src/engine/modules/scene/: ComponentArray.hpp  ComponentStorage.hpp  DefaultOptions.hpp  EntityManager.hpp  EntityMetadata.hpp  GameObject.hpp  Scene.cpp  Scene.hpp
src/engine/modules/ui/: UserInterface.hpp
src/engine/physics/: PhysicsSystem.hpp  collision_utils.hpp
src/engine/rendering/: RenderSystem.hpp  RendererSettings.hpp
src/engine/rendering/vulkan/: VulkanGraphicsBackend.cpp  VulkanGraphicsBackend.hpp  VulkanWiringContainer.hpp
src/engine/structs/: RenderTargetHandle.hpp
src/engine/structs/assets/: Material.hpp  Mesh.hpp  Model.hpp  Shader.hpp
src/engine/structs/components/: Camera.hpp  Light.hpp  Renderer.hpp
src/engine/systems/assets/: AssetManager.hpp  AssetStorage.hpp  BuiltinAssetNames.hpp  MeshImporter.cpp  ProceduralMeshGenerator.hpp
src/engine/systems/core/: GameWindow.hpp
src/engine/systems/input/: InputSystem.hpp  PickingSystem.hpp  RaycastPickingSystem.hpp
src/engine/systems/physics/: PhysicsSystem.hpp
src/engine/systems/rendering/: GameRenderData.hpp  GameRenderSystem.hpp  IPickingBackend.hpp  RenderSystem.hpp
src/engine/systems/scene/: DefaultOptions.hpp  GameObject.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneSerializer.cpp  SceneSerializer.hpp
src/engine/systems/ui/: ImguiWidget.hpp  UserInterface.hpp
src/engine/utils/: JsonUtils.hpp
src/engine/utils/math/: AABB.hpp  BoundingSphere.hpp
src/engine/vulkan/: VulkanGraphicsBackend.hpp
src/engine/vulkan/raii_wrappers/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanPipeline.cpp  VulkanSwapchain.cpp  VulkanUBO.hpp
src/engine/vulkan/services/: VulkanCommandManager.hpp  VulkanImguiRenderer.cpp  VulkanSceneRenderer.cpp  VulkanSceneRenderer.hpp
src/tools/: CMakeLists.txt
src/tools/editor/: EditorApp.hpp  EditorWiringContainer.hpp  gizmos.hpp  main.cpp
src/tools/editor/business/: ActionDispatcher.cpp  ActionDispatcher.hpp  EditorCamera.hpp  EditorGizmos.cpp  EditorGizmos.hpp  EditorOrbitCamera.cpp  EditorOrbitCamera.hpp  EditorSelection.cpp  EditorSelection.hpp  EditorSettings.cpp  EditorSettings.hpp  ObjectSelection.cpp  ObjectSelection.hpp  ObjectTransformHandle.cpp  ObjectTransformHandle.hpp  SceneLoader.cpp  SceneLoader.hpp  SceneMutations.cpp  SceneMutations.hpp  UndoHistory.hpp
src/tools/editor/controller/: EditorPickingSystem.hpp  EditorUIController.hpp  GizmoController.cpp  GizmoController.hpp  InteractionController.cpp  InteractionController.hpp  OrbitCameraController.hpp  RenderingController.cpp  RenderingController.hpp  SceneMutationsController.hpp  ShortcutController.cpp  ShortcutController.hpp  TransformController.cpp  TransformController.hpp  UndoHistoryController.hpp
src/tools/editor/controllers/: EditorGizmosController.hpp  EditorUIController.hpp  OrbitCameraController.hpp  SceneMutationsController.hpp
src/tools/editor/features/: ImguiRoot.hpp
src/tools/editor/input/: InputHandler.cpp  InputHandler.hpp  PickingSystem.hpp  Shortcut.hpp  ShortcutBindingService.hpp
src/tools/editor/presentation/: PresentationLayer.cpp  PresentationLayer.hpp
src/tools/editor/rendering/: EditorRenderData.hpp  EditorRenderSystem.hpp  EditorRenderer.cpp  EditorRenderer.hpp  VulkanBackend.cpp  VulkanBackend.hpp  VulkanEditorRenderer.cpp  VulkanEditorRenderer.hpp
src/tools/editor/services/: EditorContext.cpp  EditorContext.hpp  EditorSelection.hpp  EditorSettings.cpp  SceneLoadingService.cpp  UndoHistory.hpp
src/tools/editor/state/: EditorState.hpp  TransformDragState.hpp
src/tools/editor/ui/: EditorController.hpp  EditorMenuBar.hpp  HierarchyPanel.hpp  InspectorPanel.hpp
src/tools/editor/utils/: StringUtils.hpp
src/tools/editor/wiring/: EditorContainer.hpp  ImguiContainer.hpp  RenderingContainer.hpp  RuntimeContainer.hpp  ServicesContainer.hpp
src/tools/object_viewer/: InspectorSidePanel.hpp  ObjectViewerApp.hpp  main.cpp
tools/editor/: CMakeLists.txt
tools/editor/src/: EditorApp.hpp  main.cpp
tools/editor/src/features/: ImguiRoot.hpp
tools/editor/src/rendering/: EditorRenderer.cpp  (+4 more)
tools/editor/tests/: PackagePathsTest.cpp  UndoHistoryTest.cpp
(+780 files in other folders)
